--- a/src/Index.css
+++ b/src/Index.css
@@ -1,3 +1,4 @@
 body{
-    background-color: lightgray;
+    background-color: rgb(255,246,233);
+    background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='23' height='23' patternTransform='scale(2) rotate(160)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(50,100%,98.8%,1)'/><path d='M 10,-2.55e-7 V 20 Z M -1.1677362e-8,10 H 20 Z' transform='translate(1.5,0)' stroke-width='17' stroke='hsla(35,100%,95.7%,1)' fill='none'/></pattern></defs><rect width='800%' height='800%' transform='translate(0,0)' fill='url(%23a)'/></svg>");
 }
