--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,7 +1,19 @@
 .app-body {
-    padding: 1em;
+    padding: 1.5em;
 }
 
 .app-header {
     text-align: center;
+}
+
+.homeIMG {
+    width: 90%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 3px 5px 7px #282c34;
+    margin-top: 0em;
+    margin-bottom: 1em;
+    border-radius: 10%;
+    float: right;
 }
