--- a/src/Components/Charace.css
+++ b/src/Components/Charace.css
@@ -62,7 +62,7 @@
     padding: 10px;
     justify-content: center;
     box-shadow: 2px 2px 2px rgb(33, 33, 33);
-    background-color: #b3babe;
+    background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='40' height='40' patternTransform='scale(3) rotate(25)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(190, 62%, 85%, 1)'/><path d='M20 0L0 10v10l20-10zm0 10v10l20 10V20z'  stroke-width='1' stroke='none' fill='hsla(205, 100%, 86%, 1)'/><path d='M20-10V0l20 10V0zm0 30L0 30v10l20-10zm0 10v10l20 10V40z'  stroke-width='1' stroke='none' fill='hsla(177, 53%, 90%, 1)'/></pattern></defs><rect width='800%' height='800%' transform='translate(0,0)' fill='url(%23a)'/></svg>");
 }
 
 .abilityIMG {
@@ -74,7 +74,7 @@
     margin-top: 1em;
     margin-bottom: 1em;
     border-radius: 5px;
-    border-color: white;
+    border-color: #424649;
     border-style: groove;
     border-width: 0.5em;
     float: right;
